# Sqliterag

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS_FEATURE.md  CLAUDE.md  LLM_IMAGE.md  PLAN.md  README.md  RESEARCH.md  SPEED_UP_LLM.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 79a25e0fdbea_add_images_column_to_messages.py  f01eefb9ed2b_add_metrics_column_to_messages.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  conversation.py  document.py  message.py  rpg.py  setting.py  tool.py
backend/app/routers/: campaigns.py  chat.py  conversations.py  database.py  documents.py  models.py  settings.py  tools.py  upload.py  visualization.py
backend/app/schemas/: __init__.py  campaign.py  conversation.py  database.py  document.py  message.py  model.py  tool.py
backend/app/services/: agent_base.py  agent_context.py  agent_orchestrator.py  archivist_agent.py  base.py  builtin_tools.py  campaign_service.py  chat_service.py  eviction_service.py  frontend_bridge.py  handoff.py  huggingface_service.py  memory_service.py  narrator_agent.py  ollama_service.py  paladin.py  prompt_builder.py  rag_service.py  recap_service.py  relationship_extractor.py  rpg_service.py  rules_engine_agent.py  summarization_service.py  token_utils.py  tool_service.py  tool_validation.py
backend/tests/: conftest.py  test_chat.py  test_conversations.py  test_prompt_builder.py  test_rag.py  test_token_utils.py
docs/: GEMINI_ANALYSE.TOOLS.md  (+3 more)
(+138 files in other folders)
